--- a/contact.html
+++ b/contact.html
@@ -82,19 +82,19 @@
       </div>
       <div class="lg:w-1/2 w-full flex items-center justify-center">
         <div
-          class="lg:bg-[#FFFFFF08] bg-transparent rounded-md p-12 flex flex-col gap-10 lg:items-start items-center justify-center max-w-[460px] relative h-full"
+          class="lg:bg-[#FFFFFF08] bg-transparent rounded-md p-12 flex flex-col gap-10 lg:items-start items-center justify-center w-full relative h-full"
         >
           <div>
             <h2 class="text-[#D434FE] text-xl font-bold">
               Questions or need assistance?<br />Let us know about it!
             </h2>
           </div>
-          <form id="contactForm" class="grid gap-8 placecontent-center w-full">
+          <form id="contactForm" class="grid gap-8 plac-content-center w-full">
             <input
               type="text"
               id="name"
               name="first_name"
-              class="max-w-[400px] h-11 outline-none rounded-sm bg-[#FFFFFF08] pl-[29px] border border-white"
+              class="w-full h-11 outline-none rounded-sm bg-[#FFFFFF08] pl-[29px] border border-white"
               placeholder="First Name"
               required
             />
@@ -102,7 +102,7 @@
               type="email"
               id="email"
               name="email"
-              class="max-w-[400px] h-11 outline-none rounded-sm bg-[#FFFFFF08] pl-[29px] border border-white"
+              class="w-full h-11 outline-none rounded-sm bg-[#FFFFFF08] pl-[29px] border border-white"
               placeholder="Mail"
               required
             />
@@ -112,7 +112,7 @@
               name="message"
               cols="30"
               rows="10"
-              class="max-w-[400px] h-[119px] outline-none rounded-sm bg-[#FFFFFF08] pl-[29px] border border-white"
+              class="w-full h-[119px] outline-none rounded-sm bg-[#FFFFFF08] pl-[29px] border border-white"
               placeholder="Message"
               required
             ></textarea>
