--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <div
       class="fixed top-0 left-0 right-0 bottom-0 bg-[#150E28] z-50 px-8 text-white font-bold py-36 lg:hidden hidden"
       id="nav-mobile"
+      data-aos="fade-down-left"
+      data-aos-duration="2000"
     >
       <div class="flex w-full items-end justify-end">
         <img
@@ -94,12 +96,14 @@
       class="flex text-white lg:px-[40px] px-[20px] py-12 lg:heightHero mt-6 flex-col lg:flex-row items-center justify-center border-b-[2px] border-[#FFFFFF] border-opacity-[18%]"
     >
       <div
-        class="flex flex-col bg-ed-900 lg:w-1/2 relative mx-auto w-full justify-center"
+        class="flex flex-col lg:w-1/2 relative mx-auto w-full justify-center"
         data-aos="fade-up"
         data-aos-anchor-placement="bottom-bom"
         data-aos-duration="1000"
       >
-        <div class="flex-col items-end flex lg:hidden mx-auto">
+        <div
+          class="flex-col lg:items-end items-center flex lg:hidden mx-auto lg:text-start text-center"
+        >
           <h1
             class="lg:text-3xl text-[1rem] font-bold italic text-center lg:text-right"
           >
@@ -113,17 +117,19 @@
         </div>
 
         <img src="./build/imgs/Title (1).png" alt="" class="" />
-        <p class="mb-10">
+        <p class="mb-10 text-center lg:text-start">
           Participate in getlinked tech Hackathon 2023 stand <br />
           a chance to win a Big prize
         </p>
         <a
           href="./register.html"
-          class="bg-gradient-to-r from-[#FE34B9] to-[#903AFF] rounded-sm px-5 p-2 w-[172px] text-center"
+          class="bg-gradient-to-r from-[#FE34B9] to-[#903AFF] rounded-sm px-5 p-2 w-[172px] text-center m-auto lg:m-0"
           >Register</a
         >
 
-        <div class="flex gap-4 mt-14 lg:text-6xl text-5xl">
+        <div
+          class="flex gap-4 mt-14 lg:text-6xl text-5xl text-center items-center lg:justify-start justify-center lg:text-start"
+        >
           <p class="">00<span class="text-sm">H</span></p>
           <p class="">00<span class="text-sm">M</span></p>
           <p class="">00<span class="text-sm">S</span></p>
@@ -142,7 +148,11 @@
         </div>
       </div>
 
-      <div class="flex flex-col bg-bue-900 lg:w-1/2 relative mx-auto w-full">
+      <div
+        class="flex flex-col bg-bue-900 lg:w-1/2 relative mx-auto w-full"
+        data-aos="zoom-in-right"
+        data-aos-duration="1000"
+      >
         <div class="flex-col items-end hidden lg:flex">
           <h1
             class="lg:text-3xl text-2xl font-bold italic text-center lg:text-right"
@@ -188,6 +198,9 @@
 
       <div
         class="flex justify-center items-center bg-ed-900 relative p-16 pb-20"
+        data-aos="fade-up"
+        data-aos-easing="linear"
+        data-aos-duration="500"
       >
         <img src="./build/imgs/The big idea.png" alt="" />
         <img
@@ -202,7 +215,11 @@
         />
       </div>
 
-      <div class="flex flex-col items-start justify-center space-y-10">
+      <div
+        class="flex flex-col items-start justify-center space-y-10"
+        data-aos="zoom-out-down"
+        data-aos-duration="500"
+      >
         <div class="flex items-center justify-between gap-5">
           <h2 class="font-bold text-[32px] text-center lg:text-left">
             Introduction to getlinked <br />
@@ -237,7 +254,12 @@
       <div
         class="flex flex-col lg:items-start justify-center space-y-10 items-center"
       >
-        <div class="flex items-center justify-between gap-5 z-1">
+        <div
+          class="flex items-center justify-between gap-5 z-1"
+          data-aos="flip-left"
+          data-aos-easing="ease-out-cubic"
+          data-aos-duration="2000"
+        >
           <h2 class="font-bold text-[32px] text-center lg:text-left">
             Rules and<br />
             <span class="text-[#D434FE]">Guidelines</span>
@@ -245,8 +267,18 @@
           <img src="./build/imgs/star pu.png" alt="" />
         </div>
 
-        <div class="max-w-[535px] flex items-center z-10 relative">
-          <p class="text-[14px] text-center lg:text-left">
+        <div
+          class="max-w-[535px] flex items-center z-10 relative"
+          data-aos="flip-left"
+          data-aos-easing="ease-out-cubic"
+          data-aos-duration="2000"
+        >
+          <p
+            class="text-[14px] text-center lg:text-left"
+            data-aos="fade-up"
+            data-aos-anchor-placement="top-center"
+            data-aos-duration="2000"
+          >
             Our tech hackathon is a melting pot of visionaries, and its purpose
             is as clear as day: to shape the future. Whether you're a coding
             genius, a design maverick, or a concept wizard, you'll have the
@@ -263,7 +295,12 @@
         </div>
       </div>
 
-      <div class="flex justify-center items-center">
+      <div
+        class="flex justify-center items-center"
+        data-aos="flip-left"
+        data-aos-easing="ease-out-cubic"
+        data-aos-duration="2000"
+      >
         <img src="./build/imgs/7450159 1.png" alt="" />
       </div>
     </div>
@@ -279,6 +316,8 @@
       /> -->
       <div
         class="flex flex-col lg:items-center justify-center space-y-10 relative items-center bg-bue-900 lg:w-1/2 w-full"
+        data-aos="fade-up-right"
+        data-aos-duration="2000"
       >
         <img src="./build/imgs/Group 3.png" alt="" class="" />
         <img
@@ -293,6 +332,8 @@
       >
         <div
           class="flex lg:items-start items-center relative justify-center mb-14"
+          data-aos="fade-left"
+          data-aos-duration="1000"
         >
           <h2 class="font-bold text-[32px] text-center lg:text-left">
             Judging Criteria
@@ -304,31 +345,51 @@
         <div
           class="flex flex-col items-center gap-10 text-center lg:text-start lg:items-start"
         >
-          <p class="text-[16px]">
+          <p
+            class="text-[16px]"
+            data-aos="fade-down-right"
+            data-aos-duration="2000"
+          >
             <span class="text-[#FF26B9]">Innovation and Creativity</span>:
             Evaluate the uniqueness and creativity of the solution. Consider
             whether it addresses a real-world problem in a novel way or
             introduces innovative features.
           </p>
-          <p class="text-[16px]">
+          <p
+            class="text-[16px]"
+            data-aos="fade-down-down"
+            data-aos-duration="2000"
+          >
             <span class="text-[#FF26B9]">Innovation and Creativity</span>:
             Evaluate the uniqueness and creativity of the solution. Consider
             whether it addresses a real-world problem in a novel way or
             introduces innovative features.
           </p>
-          <p class="text-[16px]">
+          <p
+            class="text-[16px]"
+            data-aos="fade-down-right"
+            data-aos-duration="2000"
+          >
             <span class="text-[#FF26B9]">Innovation and Creativity</span>:
             Evaluate the uniqueness and creativity of the solution. Consider
             whether it addresses a real-world problem in a novel way or
             introduces innovative features.
           </p>
-          <p class="text-[16px]">
+          <p
+            class="text-[16px]"
+            data-aos="fade-down-down"
+            data-aos-duration="2000"
+          >
             <span class="text-[#FF26B9]">Innovation and Creativity</span>:
             Evaluate the uniqueness and creativity of the solution. Consider
             whether it addresses a real-world problem in a novel way or
             introduces innovative features.
           </p>
-          <p class="text-[16px]">
+          <p
+            class="text-[16px]"
+            data-aos="fade-down-right"
+            data-aos-duration="2000"
+          >
             <span class="text-[#FF26B9]">Innovation and Creativity</span>:
             Evaluate the uniqueness and creativity of the solution. Consider
             whether it addresses a real-world problem in a novel way or
@@ -337,6 +398,8 @@
           <a
             href="#"
             class="bg-gradient-to-r from-[#FE34B9] to-[#903AFF] rounded-sm px-5 p-2 w-[172px] text-center"
+            data-aos="fade-up-left"
+            data-aos-duration="2000"
             >Read More</a
           >
         </div>
@@ -356,9 +419,13 @@
     >
       <div
         class="flex flex-col items-center justify-center space-y-10 lg:w-1/2 w-full lg:items-start lg:ml-10"
+        data-aos="zoom-in-up"
+        data-aos-duration="2000"
       >
         <div
           class="flex flex-col lg:items-start items-center relative justify-start bg-blue800 mb-10"
+          data-aos="zoom-in-down"
+          data-aos-duration="2000"
         >
           <h2 class="font-bold text-[32px] text-center lg:text-left">
             Frequently Asked
@@ -374,6 +441,8 @@
 
         <div
           class="flex flex-row lg:items-start items-center relative justify-between text-center lg:w-[450px] gap-5 pb-7 border-b-2 border-[#D434FE]"
+          data-aos="flip-up"
+          data-aos-duration="2000"
         >
           <p>Can I work on a project I started before the hackathon?</p>
           <img src="./build/imgs/+.png" alt="" class="w-5" />
@@ -381,30 +450,40 @@
 
         <div
           class="flex flex-row lg:items-start items-center relative justify-between text-center lg:w-[450px] gap-5 pb-7 border-b-2 border-[#D434FE]"
+          data-aos="zoom-in-right"
+          data-aos-duration="2000"
         >
           <p>What happens if I need help during the hackathon?</p>
           <img src="./build/imgs/+.png" alt="" class="w-5" />
         </div>
         <div
           class="flex flex-row lg:items-start items-center relative justify-between text-center lg:w-[450px] gap-5 pb-7 border-b-2 border-[#D434FE]"
+          data-aos="flip-up"
+          data-aos-duration="2000"
         >
           <p>What happens if I don't have an idea for a project?</p>
           <img src="./build/imgs/+.png" alt="" class="w-5" />
         </div>
         <div
           class="flex flex-row lg:items-start items-center relative justify-between text-center lg:w-[450px] gap-5 pb-7 border-b-2 border-[#D434FE]"
+          data-aos="zoom-in-right"
+          data-aos-duration="2000"
         >
           <p>Can I work on a project I started before the hackathon?</p>
           <img src="./build/imgs/+.png" alt="" class="w-5" />
         </div>
         <div
           class="flex flex-row lg:items-start items-center relative justify-between text-center lg:w-[450px] gap-5 pb-7 border-b-2 border-[#D434FE]"
+          data-aos="flip-up"
+          data-aos-duration="2000"
         >
           <p>Can I work on a project I started before the hackathon?</p>
           <img src="./build/imgs/+.png" alt="" class="w-5" />
         </div>
         <div
           class="flex flex-row lg:items-start items-center relative justify-between text-center lg:w-[450px] gap-5 pb-7 border-b-2 border-[#D434FE]"
+          data-aos="zoom-in-right"
+          data-aos-duration="2000"
         >
           <p>Can I work on a project I started before the hackathon?</p>
           <img src="./build/imgs/+.png" alt="" class="w-5" />
@@ -413,6 +492,8 @@
 
       <div
         class="flex flex-col items-center justify-center space-y-10 lg:w-1/2 w-full"
+        data-aos="flip-up"
+        data-aos-duration="2000"
       >
         <img src="./build/imgs/Group 7.png" alt="" />
       </div>
@@ -423,7 +504,12 @@
       class="flex text-white lg:px-[40px] px-[20px] flex-col relative items-center justify-center space-y-10 border-b-[2px] border-[#FFFFFF] border-opacity-[18%] py-12"
       id="imeline"
     >
-      <div class="flex flex-col items-center justify-center text-center">
+      <div
+        class="flex flex-col items-center justify-center text-center"
+        data-aos="zoom-in-down"
+        data-aos-easing="linear"
+        data-aos-duration="2000"
+      >
         <h2 class="text-[32px] font-bold">Timeline</h2>
         <p class="text-[14px] w-[70%]">
           Here is the breakdown of the time we anticipate using for the upcoming
@@ -433,6 +519,8 @@
 
       <div
         class="flex flex-row-reverse lg:flex-row lg:w-[95%] w-full justify-center lg:items-end items-center"
+        data-aos="fade-up"
+        data-aos-duration="2000"
       >
         <div class="lg:text-end lg:w-[35%] w-full text-start">
           <h3 class="lg:text-[24px] text-[10px] text-[#D434FE] font-bold">
@@ -469,6 +557,8 @@
 
       <div
         class="flex flex-row lg:flex-row lg:w-[95%] w-full justify-center lg:items-end items-center"
+        data-aos="fade-up"
+        data-aos-duration="2000"
       >
         <div class="w-[35%] hidden lg:block">
           <h3 class="text-[24px] text-[#D434FE] font-bold text-end">
@@ -504,6 +594,8 @@
 
       <div
         class="flex flex-row-reverse lg:flex-row lg:w-[95%] w-full justify-center lg:items-end items-center"
+        data-aos="fade-up"
+        data-aos-duration="2000"
       >
         <div class="lg:text-end lg:w-[35%] w-full text-start">
           <h3 class="lg:text-[24px] text-[10px] text-[#D434FE] font-bold">
@@ -539,6 +631,8 @@
 
       <div
         class="flex flex-row lg:flex-row lg:w-[95%] w-full justify-center lg:items-end items-center"
+        data-aos="fade-up"
+        data-aos-duration="2000"
       >
         <div class="w-[35%] hidden lg:block">
           <h3 class="text-[24px] text-[#D434FE] font-bold text-end">
@@ -574,6 +668,8 @@
 
       <div
         class="flex flex-row-reverse lg:flex-row lg:w-[95%] w-full justify-center lg:items-end items-center"
+        data-aos="fade-up"
+        data-aos-duration="2000"
       >
         <div class="lg:text-end lg:w-[35%] w-full text-start">
           <h3 class="lg:text-[24px] text-[10px] text-[#D434FE] font-bold">
@@ -610,6 +706,8 @@
 
       <div
         class="flex flex-row lg:flex-row lg:w-[95%] w-full justify-center lg:items-end items-center"
+        data-aos="fade-up"
+        data-aos-duration="2000"
       >
         <div class="w-[35%] hidden lg:block">
           <h3 class="text-[24px] text-[#D434FE] font-bold text-end">
@@ -650,6 +748,10 @@
     >
       <div
         class="flex flex-col lg:items-start items-center relative justify-start bg-blue800 mb-10 lg:w-1/2 w-full ml-auto"
+        data-aos="fade-left"
+        data-aos-anchor="#example-anchor"
+        data-aos-offset="500"
+        data-aos-duration="500"
       >
         <h2 class="font-bold text-[32px] text-center lg:text-left">
           Prizes and
@@ -664,11 +766,22 @@
 
       <div
         class="flex lg:flex-row flex-col space-y-11 lg:space-y-0 items-center justify-center relative w-full"
+        data-aos="fade-right"
+        data-aos-offset="000"
+        data-aos-easing="ease-in-sine"
       >
-        <div>
+        <div
+          data-aos="fade-up"
+          data-aos-anchor-placement="bottom-bottom"
+          data-aos-duration="2000"
+        >
           <img src="./build/imgs/9486889 1.png" alt="" />
         </div>
-        <div>
+        <div
+          data-aos="fade-down"
+          data-aos-anchor-placement="bottom-bottom"
+          data-aos-duration="2000"
+        >
           <img src="./build/imgs/Rewards.png" alt="" />
         </div>
       </div>
@@ -708,7 +821,14 @@
     <div
       class="flex flex-col lg:flex-col text-white lg:px-[40px] px-[20px] relative items-center justify-center space-y-10 border-b-[2px] border-[#FFFFFF] border-opacity-[18%] py-12 overflow-hidden"
     >
-      <div class="flex flex-col items-center justify-center text-center">
+      <div
+        class="flex flex-col items-center justify-center text-center"
+        data-aos="fade-zoom-in"
+        data-aos-easing="ease-in-back"
+        data-aos-delay="300"
+        data-aos-offset="0"
+        data-aos-duration="2000"
+      >
         <h2 class="text-[32px] font-bold">Partners and Sponsors</h2>
         <p class="text-[14px] w-[70%]">
           Getlinked Hackathon 1.0 is honored to have the following major
@@ -716,7 +836,12 @@
         </p>
       </div>
 
-      <div class="relative">
+      <div
+        class="relative"
+        data-aos="flip-left"
+        data-aos-easing="ease-out-cubic"
+        data-aos-duration="2000"
+      >
         <img src="./build/imgs/Partner and sponsors section.png" alt="" />
         <img
           src="./build/imgs/star pu.png"
@@ -748,7 +873,11 @@
     <div
       class="flex flex-col lg:flex-row text-white lg:px-[40px] px-[20px] relative items-center justify-center space-y-10 border-b-[2px] border-[#FFFFFF] border-opacity-[18%] py-12 overflow-hidden"
     >
-      <div class="flex flex-col lg:w-1/2 w-[90%] relative">
+      <div
+        class="flex flex-col lg:w-1/2 w-[90%] relative"
+        data-aos="zoom-out"
+        data-aos-delay="1000"
+      >
         <div
           class="flex flex-col lg:items-start items-center relative justify-start bg-blue800 mb-10"
         >
@@ -775,8 +904,11 @@
 
         <div
           class="p-5 bg-[#d9d9d90a] border-[#D434FE] border-[1px] flex flex-col items-start justify-center"
+          data-aos="flip-left"
+          data-aos-easing="ease-out-cubic"
+          data-aos-duration="2500"
         >
-          <p class="mb-9">
+          <p class="mb-9" data-aos="fade-up" data-aos-duration="2000">
             At getlinked tech Hackathon 1.0, we value your privacy and are
             committed to protecting your personal information. This Privacy
             Policy outlines how we collect, use, disclose, and safeguard your
@@ -789,7 +921,7 @@
           <h3 class="font-bold mb-5">
             Here are terms of our Standard License:
           </h3>
-          <ul class="mb-5">
+          <ul class="mb-5" data-aos="fade-up" data-aos-duration="2000">
             <li class="flex flex-row align-baseline mb-5 gap-3">
               <img
                 src="./build/imgs/list terms.png"
@@ -814,7 +946,11 @@
             </li>
           </ul>
 
-          <div class="w-full grid place-content-center">
+          <div
+            class="w-full grid place-content-center"
+            data-aos="fade-down"
+            data-aos-duration="2000"
+          >
             <a
               href=""
               class="bg-gradient-to-r from-[#FE34B9] to-[#903AFF] rounded-sm px-5 p-2 w-[172px] text-center"
@@ -830,7 +966,11 @@
         />
       </div>
 
-      <div class="flex lg:w-1/2 w-[90%] items-center justify-center">
+      <div
+        class="flex lg:w-1/2 w-[90%] items-center justify-center"
+        data-aos="fade-down-right"
+        data-aos-duration="2000"
+      >
         <img src="./build/imgs/Group 10.png" alt="" />
       </div>
     </div>
